...
                                  : null,
                            ),
                            const SizedBox(height: 16),
                          ],

                          TextFormField(
                            key: const ValueKey('auth_email_field'),
                            controller: _emailCtrl,
                            keyboardType: TextInputType.emailAddress,
                            textInputAction: TextInputAction.next,
                            autofillHints: const [AutofillHints.email],
                            autocorrect: false,
                            decoration: InputDecoration(
...
                              return null;
                            },
                          ),
                          const SizedBox(height: 16),

                          TextFormField(
                            key: const ValueKey('auth_password_field'),
                            controller: _passCtrl,
                            obscureText: _obscure,
                            textInputAction: TextInputAction.done,
                            autofillHints: const [AutofillHints.password],
                            onFieldSubmitted: (_) => _submit(),
                            decoration: InputDecoration(
...
